Release 17.1.3 (#414)